[package]
name = "rocket"
version = "0.1.0"
authors = ["Adolfo Ochagavía <aochagavia92@gmail.com>"]

[[bin]]
name = "main"

[[bin]]
name = "collision_test"
path = "src/collision_tests.rs"

[dependencies]
itertools = "0.3"
piston = "0.3"
piston2d-graphics = "0.4"
pistoncore-glutin_window = "0.4"
piston2d-opengl_graphics = "0.4"
rand = "0.3"
sdl2 = "0.5"
